--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "express-fileupload": "^0.4.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-image": "^1.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -32,7 +34,7 @@
       "react"
     ],
     "env": {
-      "presets":[
+      "presets": [
         "react-hmre"
       ]
     }
