--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.15.2",
     "express-fileupload": "^0.4.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-image": "^1.3.1"
+    "react-image": "^1.3.1",
+    "url-loader": "^0.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
