--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "express": "^4.15.2",
     "express-fileupload": "^0.4.0",
+    "file-loader": "^1.1.10",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
