--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^0.28.10",
     "express": "^4.15.2",
     "express-fileupload": "^0.4.0",
     "file-loader": "^1.1.10",
+    "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
+    "npm ": "^2.2.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
+    "react-css-loader": "0.0.3",
     "react-dom": "^15.4.2",
     "react-image": "^1.3.1",
+    "style": "0.0.3",
+    "style-loader": "^0.20.2",
     "url-loader": "^0.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "open": "0.0.5",
@@ -33,7 +40,7 @@
   },
   "babel": {
     "presets": [
-      "es2015",
+      "env",
       "react"
     ],
     "env": {
