--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-server",
+  "name": "React-Express-Node-Integrated Application",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,6 +16,7 @@
     "express-fileupload": "^0.4.0",
     "file-loader": "^1.1.10",
     "json-loader": "^0.5.7",
+    "multer": "^1.3.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
