name changed in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Express-Node-Integrated Application",
+  "name": "integrated.app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
